--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-*{
-   box-sizing: border-box;
+* {
+  box-sizing: border-box;
+}
+.header {
+  background-color: black;
+  font-size: 16px;
+  color: white;
 }
